--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/tailwindcss": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
